--- a/views/pages/admin/about-client.ejs
+++ b/views/pages/admin/about-client.ejs
@@ -57,8 +57,10 @@
 
             <div class="client-actions">
                 <button class="btn-primary edit-btn">
-                    <i class="fas fa-edit"></i>
-                    <span>Modifier</span>
+                    <a href="/update-client/<%= client_.id_client %>">
+                        <i class="fas fa-edit"></i>
+                        <span>Modifier</span>
+                    </a>
                 </button>
                 <button class="btn-secondary schedule-btn">
                     <i class="fas fa-calendar-plus"></i>
