--- a/public/CSS/ADMIN/aboutClient.scss
+++ b/public/CSS/ADMIN/aboutClient.scss
@@ -131,6 +131,11 @@
         display: flex;
         flex-direction: column;
         gap: $spacing-xl;
+
+        a{
+            text-decoration: none;
+            color: $white
+        }
     }
 
     // ! MAIN CLIENT CARD
