--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -43,13 +43,6 @@
 					</button>
 				</div>
 				<div class="mobile-icons">
-					<span class="notification-icon">
-						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="currentColor"
-							class="bi bi-bell" viewBox="0 0 16 16">
-							<path
-								d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6" />
-						</svg>
-					</span>
 					<% if (typeof user !== 'undefined' && user && user.avatar) { %>
 						<a href="/profil" class="avatar-link">
 							<img src="/uploads/<%= user.avatar %>" alt="avatar" class="avatar-nav">
@@ -71,7 +64,7 @@
 						<ul class="mobile-nav-list">
 							<li><a href="/" onclick="closeMobileMenu()">🏠 Accueil</a></li>
 							<li><a href="/planning" onclick="closeMobileMenu()">📅 Planning</a></li>
-							<li><a href="/messagerie" onclick="closeMobileMenu()">💬 Messagerie</a></li>
+							<!-- <li><a href="/messagerie" onclick="closeMobileMenu()">💬 Messagerie</a></li> -->
 							<li><a href="/documents" onclick="closeMobileMenu()">📁 Documents</a></li>
 							<% if (typeof user !== 'undefined' && user && user.role === 1) { %>
 								<li><a href="/listeEmployer" onclick="closeMobileMenu()">👥 Salariés</a></li>
@@ -91,13 +84,6 @@
 
 	<!-- ! START DROITE LG -->
 	<div class="d-none d-lg-flex align-items-lg-center gap-lg-5">
-		<span>
-			<svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="currentColor" class="bi bi-bell"
-				viewBox="0 0 16 16">
-				<path
-					d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6" />
-			</svg>
-		</span>
 		<% if (typeof user !== 'undefined' && user && user.avatar) { %>
 			<span>
 				<a href="/profil"><img id="avatar" src="/uploads/<%= user.avatar %>" alt="avatar" class="avatar-nav"></a>
