--- a/public/CSS/ADMIN/aboutClient.scss
+++ b/public/CSS/ADMIN/aboutClient.scss
@@ -715,6 +715,11 @@
                     background: $secondary-color;
                     border-color: $secondary-color;
                 }
+
+                a{
+                    text-decoration: none;
+                    color: $primary-color;
+                }
             }
 
             .no-appointments {
